# etf-portfolio-lab

./: .env.example  .gitignore  01_PRODUCT_REQUIREMENTS.md  02_SYSTEM_ARCHITECTURE.md  03_IMPLEMENTATION_PLAN.md  04_DATA_MODEL_AND_SCHEMA.md  05_DATA_SOURCES_AND_PROVIDER_STRATEGY.md  06_ANALYTICS_BACKTEST_PROJECTION_SPEC.md  07_UX_UI_DESIGN_SPEC.md  08_AGENT_MODEL_DELEGATION_POLICY.md  09_DEVELOPMENT_TASK_BREAKDOWN.md  10_ACCEPTANCE_CRITERIA_AND_QA.md  11_SAMPLE_CLAUDE_START_PROMPT.md  CLAUDE.md  README.md  README_FOR_CLAUDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: fetch_all.py  import_dividends.py  import_etf_master.py  import_holdings.py  import_industry.py  import_prices.py  normalize_price_symbols.py  run_fetch.py  run_quality_checks.py  seed.py
backend/tests/: test_ai_analysis.py  test_api.py  test_backtest_service.py  test_capital_holding_provider.py  test_cathay_holding_provider.py  test_concentration_service.py  test_data_fetch_service.py  test_data_providers.py  test_data_quality.py  test_data_refresh_api.py  test_dividend_ranking_service.py  test_dividend_recovery_service.py  test_exposure_service.py  test_finance_math.py  test_finmind_holding_provider.py  test_fubon_holding_provider.py  test_fuhua_holding_provider.py  test_health.py  test_importers.py  test_importers_dtype.py  test_kgi_holding_provider.py  test_overlap_service.py  test_portfolio_service.py  test_projection_service.py  test_refresh_holdings_dedup.py  (+7 more)
(+137 files in other folders)
